Update and rename login.php to login.html
Renamed the files to .html

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
             <div class="container">
               <div class="navbar-translate">
-                <a class="navbar-brand" href="index.php">
+                <a class="navbar-brand" href="index.html">
                   Event Manager </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                   <li class="dropdown nav-item">
-                    <a href="register.php" class="nav-link">
+                    <a href="register.html" class="nav-link">
                       Register <i class="material-icons">person_add</i> 
                     </a>
                   </li>
@@ -90,7 +90,7 @@
                           <div class="text-center mr-auto py-0">
                             <label class="form-check-label">
                               <span class="form-check-sign">
-                              </span>Don't have an account? <a href="register.php">Register Here </a> Now.
+                              </span>Don't have an account? <a href="register.html">Register Here </a> Now.
                             </label>
                           </div>
                         </form>
