Update and rename register.php to register.html
Also changed extension to html

--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
             <div class="container">
               <div class="navbar-translate">
-                <a class="navbar-brand" href="index.php">
+                <a class="navbar-brand" href="index.html">
                   Event Manager </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                   <li class="dropdown nav-item">
-                    <a href="login.php" class="nav-link">
+                    <a href="login.html" class="nav-link">
                       <i class="material-icons">lock_outline</i> Login
                     </a>
                   </li>
@@ -125,7 +125,7 @@
                               <span class="form-check-sign">
                               </span>
                               Already have an account? 
-                              <a href="login.php">Login Here </a>.
+                              <a href="login.html">Login Here </a>.
                             </label>
                           </div>
                         </form>
