--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -36,31 +36,34 @@
                 <i class="material-icons">apps</i> Godson C. Jnr
               </a>
               <div class="dropdown-menu dropdown-with-icons">
-                <a href="../index.html" class="dropdown-item">
+                <a href="javascript:void(0)" class="dropdown-item">
                   <i class="material-icons">add_alert</i> Create Schedule
                 </a>
-                <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
+                <a href="javascript:void(0)" class="dropdown-item">
                   <i class="material-icons">create</i> Edit Profile
+                </a>
+                <a href="javascript:void(0)" class="dropdown-item">
+                  <i class="material-icons">power_settings_new</i> Logout
                 </a>
               </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-                <i class="material-icons">cloud_download</i> Download
+                <i class="material-icons">settings</i> Settings
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="#" target="_blank" data-original-title="Follow us on Twitter">
                 <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="#" target="_blank" data-original-title="Like us on Facebook">
                 <i class="fa fa-facebook-square"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="#" target="_blank" data-original-title="Follow us on Instagram">
                 <i class="fa fa-instagram"></i>
               </a>
             </li>
@@ -68,7 +71,7 @@
         </div>
       </div>
     </nav>
-    <div class="page-header header-filter" data-parallax="true" style="background-image: url('../img/banner11.jpg');"></div>
+    <div class="page-header header-filter" data-parallax="true" style="background-image: url('../img/banners/banner2.jpg');"></div>
     <div class="main main-raised">
       <div class="profile-content">
         <div class="container">
@@ -76,84 +79,49 @@
             <div class="col-md-6 ml-auto mr-auto">
               <div class="profile">
                 <div class="avatar">
-                  <img src="holder.js/300x200?size=50? alt="Circle Image" class="img-raised rounded-circle img-fluid">
+                  <img src="../img/profile/Godson.jpg" alt="Circle Image" class="img-raised rounded-circle img-fluid">
                 </div>
                 <div class="name">
                   <h3 class="title">Godson C. Jnr</h3>
-                  <h6>Designer</h6>
-                  <a href="#pablo" class="btn btn-just-icon btn-link btn-dribbble"><i class="fa fa-dribbble"></i></a>
-                  <a href="#pablo" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="#pablo" class="btn btn-just-icon btn-link btn-pinterest"><i class="fa fa-pinterest"></i></a>
+                  <h4 class="btn mx-auto bg-primary btn-lg">Current Events & Schedules</h4>
                 </div>
               </div>
             </div>
           </div>
-          <div class="description text-center">
-            <p>An artist of considerable range, Chet Faker &#x2014; the name taken by Melbourne-raised, Brooklyn-based Nick Murphy &#x2014; writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. </p>
-          </div>
+
           <div class="row">
-            <div class="col-md-6 ml-auto mr-auto">
-              <div class="profile-tabs">
-                <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                      <i class="material-icons">camera</i> Studio
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                      <i class="material-icons">palette</i> Work
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
-                      <i class="material-icons">favorite</i> Favorite
-                    </a>
-                  </li>
-                </ul>
+            <div class="col-md-12 mx-auto">
+              <div class="row py-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card">
+                    <div class="card-header card-header-primary"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Meeting with Project Supervisor</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                    </div>
+                    </div>
+                  </div> 
+                </div>
+
+                
               </div>
             </div>
           </div>
-          <div class="tab-content tab-space">
-            <div class="tab-pane active text-center gallery" id="studio">
-              <div class="row">
-                <div class="col-md-3 ml-auto">
-                  <img src="../assets/img/examples/studio-1.jpg" class="rounded">
-                  <img src="../assets/img/examples/studio-2.jpg" class="rounded">
-                </div>
-                <div class="col-md-3 mr-auto">
-                  <img src="../assets/img/examples/studio-5.jpg" class="rounded">
-                  <img src="../assets/img/examples/studio-4.jpg" class="rounded">
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane text-center gallery" id="works">
-              <div class="row">
-                <div class="col-md-3 ml-auto">
-                  <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                  <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                  <img src="../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
-                </div>
-                <div class="col-md-3 mr-auto">
-                  <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                  <img src="../assets/img/examples/clem-onojegaw.jpg" class="rounded">
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane text-center gallery" id="favorite">
-              <div class="row">
-                <div class="col-md-3 ml-auto">
-                  <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                  <img src="../assets/img/examples/studio-3.jpg" class="rounded">
-                </div>
-                <div class="col-md-3 mr-auto">
-                  <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                  <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                  <img src="../assets/img/examples/studio-1.jpg" class="rounded">
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
@@ -162,22 +130,17 @@
         <nav class="float-left">
           <ul>
             <li>
-              <a href="https://www.creative-tim.com">
-                Creative Tim
+              <a href="javascript:;">
+                Nacoss Bauchi
               </a>
             </li>
             <li>
-              <a href="https://presentation.creative-tim.com">
-                About Us
+              <a href="javascript:;">
+                About Our Platform
               </a>
             </li>
             <li>
-              <a href="https://blog.creative-tim.com">
-                Blog
-              </a>
-            </li>
-            <li>
-              <a href="https://www.creative-tim.com/license">
+              <a href="javascript:;">
                 Licenses
               </a>
             </li>
@@ -187,8 +150,8 @@
           &copy;
           <script>
             document.write(new Date().getFullYear())
-          </script>, made with <i class="material-icons">favorite</i> by
-          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+          </script>, Copyright Reserved | by
+          <a href="javascript:;" target="_blank">Godson C. Jnr</a> Powered by :: <a href="javascript:;" target="_blank" class="text-uppercase">NACOSS Bauchi</a> 
         </div>
       </div>
     </footer>
