layout set and ready

--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -117,6 +117,56 @@
                   </div> 
                 </div>
 
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card">
+                    <div class="card-header card-header-warning"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Naccos North-East Conference</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                    </div>
+                    </div>
+                  </div> 
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card">
+                    <div class="card-header card-header-success"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Nicki Birthday Party</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                    </div>
+                    </div>
+                  </div> 
+                </div>
+
                 
               </div>
             </div>
