resolved the responsive issue

--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -76,14 +76,15 @@
       <div class="profile-content">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 ml-auto mr-auto">
+            <div class="col-md-12 mx-auto">
               <div class="profile">
                 <div class="avatar">
                   <img src="../img/profile/Godson.jpg" alt="Circle Image" class="img-raised rounded-circle img-fluid">
                 </div>
                 <div class="name">
                   <h3 class="title">Godson C. Jnr</h3>
-                  <h4 class="btn mx-auto bg-primary btn-lg">Current Events & Schedules</h4>
+                  <h5 class="text-left display-4 title">Current Events & Schedules</h5>
+                  <hr class="w-25 float-left">
                 </div>
               </div>
             </div>
@@ -201,7 +202,7 @@
           <script>
             document.write(new Date().getFullYear())
           </script>, Copyright Reserved | by
-          <a href="javascript:;" target="_blank">Godson C. Jnr</a> Powered by :: <a href="javascript:;" target="_blank" class="text-uppercase">NACOSS Bauchi</a> 
+          <a href="javascript:;" target="_blank" class="text-danger">Godson C. Jnr</a> Powered by :: <a href="javascript:;" target="_blank" class="text-danger">UpliftHub</a> 
         </div>
       </div>
     </footer>
