--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
             </div>
         </nav>
 
-        <div class="page-header header-filter" filter-color="purple" style="background-image: url('img/banner17.jpg')">
+        <div class="page-header header-filter" filter-color="purple" style="background-image: url('img/banners/banner17.jpg')">
           <div class="container">
             <div class="row">
               <div class="col-md-4 mx-auto mt-md-5 pt-5">
