--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/mine.css" />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="stylesheet" href="../css/demo.css" />
+    <link rel="stylesheet" href="../css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="../font/font-awesome/css/font-awesome.min.css" />
 
     <!-- Material Kit CSS -->
@@ -18,7 +19,7 @@
   </head>
 
   <body class="profile-page sidebar-collapse">
-    <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <nav class="navbar navbar-transparent bg-dark navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
       <div class="container">
         <div class="navbar-translate">
           <a class="navbar-brand" href="index.html">
@@ -94,8 +95,10 @@
             <div class="col-md-12 mx-auto">
               <div class="row py-4">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card">
-                    <div class="card-header card-header-primary"></div>
+                  <div class="card event-card">
+                    <div class="card-header card-header-primary">
+                      
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Meeting with Project Supervisor</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -113,13 +116,13 @@
                             <i class="material-icons">delete_forever</i>
                           </a>
                         </div>
-                    </div>
+                      </div>
                     </div>
                   </div> 
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card">
+                  <div class="card event-card">
                     <div class="card-header card-header-warning"></div>
                     <div class="card-body">
                       <h4 class="card-title">Naccos North-East Conference</h4>
@@ -144,7 +147,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card">
+                  <div class="card event-card">
                     <div class="card-header card-header-success"></div>
                     <div class="card-body">
                       <h4 class="card-title">Nicki Birthday Party</h4>
@@ -168,7 +171,80 @@
                   </div> 
                 </div>
 
-                
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card event-card">
+                    <div class="card-header card-header-warning"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Meeting with Project Supervisor</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div> 
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card event-card">
+                    <div class="card-header card-header-info"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Naccos North-East Conference</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                    </div>
+                    </div>
+                  </div> 
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card event-card">
+                    <div class="card-header card-header-danger"></div>
+                    <div class="card-body">
+                      <h4 class="card-title">Nicki Birthday Party</h4>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <hr>
+                      <div class="footer">
+                        <div class="float-left text-muted">
+                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Status: <span class="text-primary">Pending</span></p>
+                        </div>
+                        <div class="float-right">
+                          <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
+                            <i class="material-icons">mode_edit</i>
+                          </a>
+                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                            <i class="material-icons">delete_forever</i>
+                          </a>
+                        </div>
+                    </div>
+                    </div>
+                  </div> 
+                </div>  
               </div>
             </div>
           </div>
