Material Design Icon Testing

--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -97,7 +97,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                   <div class="card event-card">
                     <div class="card-header card-header-primary">
-                      
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
                     </div>
                     <div class="card-body">
                       <h4 class="card-title">Meeting with Project Supervisor</h4>
