--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -7,10 +7,9 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" />
+    <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" /> -->
     <link rel="stylesheet" href="../css/mine.css" />
     <link rel="stylesheet" href="../css/animate.css" />
-    <link rel="stylesheet" href="../css/demo.css" />
     <link rel="stylesheet" href="../css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="../font/font-awesome/css/font-awesome.min.css" />
 
@@ -19,6 +18,35 @@
   </head>
 
   <body class="profile-page sidebar-collapse">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="recipient-name" class="col-form-label">Recipient:</label>
+                <input type="text" autofocus="" class="form-control" id="recipient-name">
+              </div>
+              <div class="form-group">
+                <label for="message-text" class="col-form-label">Message:</label>
+                <textarea class="form-control" id="message-text"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Send message</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <nav class="navbar navbar-transparent bg-dark navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
       <div class="container">
         <div class="navbar-translate">
@@ -37,7 +65,7 @@
                 <i class="material-icons">apps</i> Godson C. Jnr
               </a>
               <div class="dropdown-menu dropdown-with-icons">
-                <a href="javascript:void(0)" class="dropdown-item">
+                <a href="javascript:void(0)" class="dropdown-item" data-toggle="modal" data-target="#exampleModalCenter">
                   <i class="material-icons">add_alert</i> Create Schedule
                 </a>
                 <a href="javascript:void(0)" class="dropdown-item">
@@ -79,7 +107,7 @@
           <div class="row">
             <div class="col-md-12 mx-auto">
               <div class="profile">
-                <div class="avatar">
+                <div class="avatar animated bounce">
                   <img src="../img/profile/Godson.jpg" alt="Circle Image" class="img-raised rounded-circle img-fluid">
                 </div>
                 <div class="name">
@@ -90,14 +118,14 @@
               </div>
             </div>
           </div>
-
           <div class="row">
-            <div class="col-md-12 mx-auto">
+            <div class="col-md-12 mx-auto">                
               <div class="row py-4">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
+                  <div class="card event-card animated">
                     <div class="card-header card-header-primary">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
                     </div>
                     <div class="card-body">
                       <h4 class="card-title">Meeting with Project Supervisor</h4>
@@ -113,7 +141,7 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
                       </div>
@@ -122,15 +150,18 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
-                    <div class="card-header card-header-warning"></div>
+                  <div class="card event-card animated">
+                    <div class="card-header card-header-warning">
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Naccos North-East Conference</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <hr>
                       <div class="footer">
                         <div class="float-left text-muted">
-                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Date: <span class="text-primary">12 - 05 - 2018 &nbsp; | &nbsp; 05:15am</span></p>
                           <p class="py-0">Status: <span class="text-primary">Pending</span></p>
                         </div>
                         <div class="float-right">
@@ -138,7 +169,7 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
                     </div>
@@ -147,15 +178,18 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
-                    <div class="card-header card-header-success"></div>
+                  <div class="card event-card animated">
+                    <div class="card-header card-header-success">
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
+                    </div>
                     <div class="card-body">
-                      <h4 class="card-title">Nicki Birthday Party</h4>
+                      <h4 class="card-title">Mom's Birthday</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <hr>
                       <div class="footer">
                         <div class="float-left text-muted">
-                          <p class="py-0">Date: <span class="text-primary">10 - 05 - 2018 &nbsp; | &nbsp; 09:15am</span></p>
+                          <p class="py-0">Date: <span class="text-primary">19 - 05 - 2018 &nbsp; | &nbsp; 03:15am</span></p>
                           <p class="py-0">Status: <span class="text-primary">Pending</span></p>
                         </div>
                         <div class="float-right">
@@ -163,7 +197,7 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
                     </div>
@@ -172,8 +206,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
-                    <div class="card-header card-header-warning"></div>
+                  <div class="card event-card animated">
+                    <div class="card-header card-header-warning">
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Meeting with Project Supervisor</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -188,7 +225,7 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
                       </div>
@@ -197,8 +234,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
-                    <div class="card-header card-header-info"></div>
+                  <div class="card event-card animated">
+                    <div class="card-header card-header-info">
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Naccos North-East Conference</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -213,7 +253,7 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
                     </div>
@@ -222,8 +262,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                  <div class="card event-card">
-                    <div class="card-header card-header-danger"></div>
+                  <div class="card event-card animated">
+                    <div class="card-header card-header-danger">
+                      <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
+                      <i class="mdi mdi-pin mdi-rotate-315 mdi-24px float-left"></i>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Nicki Birthday Party</h4>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -238,10 +281,10 @@
                             <i class="material-icons">mode_edit</i>
                           </a>
                           <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
-                            <i class="material-icons">delete_forever</i>
+                            <i class="material-icons">delete</i>
                           </a>
                         </div>
-                    </div>
+                      </div>
                     </div>
                   </div> 
                 </div>  
@@ -291,11 +334,10 @@
     <script src="../js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
     <script src="../js/plugins/nouislider.min.js" type="text/javascript"></script>
     <script src="../js/material-kit.js" type="text/javascript"></script>
-    <script src="../js/plugins/holder.min.js" type="text/javascript"></script>
+    <!-- <script src="../js/custom.js" type="text/javascript"></script> -->
+    <!-- <script src="../js/plugins/holder.min.js" type="text/javascript"></script> -->
 
-    <script src="../js/plugins/bootstrap-tagsinput.js"></script>
+    <!-- <script src="../js/plugins/bootstrap-tagsinput.js"></script> -->
     <script src="../js/plugins/jasny-bootstrap.min.js"></script>
-    
-    <script src="../js/plugins/bootstrap-datetimepicker.min.js"></script>
   </body>
 </html>
